--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style2.css"/>
 </head>
 <body>
-    <button class="register-top-btn" onclick="window.location.href='register.html'">Załóż konto</button>
+  <button class="register-top-btn" onclick="window.location.href='register.html'">Załóż konto</button>
+
   <div class="container">
     <h1>Logowanie</h1>
 
@@ -18,30 +19,26 @@
       <div class="buttons-wrapper">
         <button id="loginButton">Zaloguj się</button>
       </div>
-      
+
       <p style="text-align: center; margin-top: 10px;">
-        <a href="forgot-password.html">Nie pamiętasz hasła?</a>
+        <a href="forgot-password.html" id="forgotPasswordButton">Nie pamiętasz hasła?</a>
       </p>
-      
     </div>
 
-    <!-- Powitanie, menu i timer -->
+    <!-- Powitanie po zalogowaniu -->
     <div id="greeting" class="hidden"></div>
-    <div id="menu" class="hidden">
-        <!-- inne elementy menu, jeśli są -->
-        <button id="logoutButton">Wyloguj</button>
-      </div>
+
+    <!-- Menu widoczne po zalogowaniu -->
     <div id="menu" class="hidden">
       <ul>
         <li><a href="#">Opcja 1</a></li>
       </ul>
+      <button id="logoutButton">Wyloguj się</button>
     </div>
+
     <div id="timer" class="hidden"></div>
-    <button id="logoutButton" class="hidden">Wyloguj się</button>
   </div>
 
   <script src="script.js"></script>
- <!-- <script src="main.js"></script> -->
-
 </body>
 </html>
